feat: Implement GroupProfile management endpoints and refactor GroupUser repository
- Added GroupProfileController for managing group-profile associations with endpoints for CRUD operations.
- Refactored GroupAdapterJpa to implement GroupProfileRepository and GroupUserRepository interfaces.
- Migrated GroupUserAdapterJpa functionality into GroupAdapterJpa, removing the need for the former.
- Introduced new JPA repositories: GroupJpaRepository, GroupProfileJpaRepository, and GroupUserJpaRepository for better data access.
- Updated entity classes to use Lombok for boilerplate code reduction.
- Enhanced GroupProfile and GroupUser domain models with new methods for better data handling.
- Removed deprecated methods and streamlined the codebase for improved maintainability.